--- a/codinglist.html
+++ b/codinglist.html
@@ -149,7 +149,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td>guide</td>
               <td></td>
@@ -196,7 +196,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td>Splash</td>
               <td></td>
@@ -208,7 +208,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -220,7 +220,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -232,7 +232,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -244,7 +244,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -256,7 +256,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -268,7 +268,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -280,7 +280,7 @@
               <td></td>
               <td></td>
             </tr>
-            <!-- <tr class="pb_end">
+            <!-- <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -292,7 +292,7 @@
               <td></td>
               <td></td>
             </tr> -->
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -304,7 +304,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -316,7 +316,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -328,7 +328,7 @@
               <td>20220111 로딩 게이지 속도 변경(1S→2S)<br>220106 기존 progress lib 삭제, 로딩 타입 변경</td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -375,7 +375,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>서비스 코드 자동 입력</td>
@@ -387,7 +387,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -399,7 +399,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -411,7 +411,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -423,7 +423,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -435,7 +435,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -447,7 +447,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -459,7 +459,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -471,7 +471,7 @@
               <td>220111 최소 디바이스 320 UI 대응<br>220106 기대수명 progressbar 추가</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>서비스 코드 직접 입력</td>
@@ -483,7 +483,7 @@
               <td>개발 holding</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>서비스 코드 만료 안내</td>
@@ -531,7 +531,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>Landing page_MW_Main</td>
@@ -543,7 +543,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -555,7 +555,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -567,7 +567,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -579,7 +579,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -591,7 +591,7 @@
               <td>211222 문구 수정 반영</td>
               <td></td>
             </tr>         
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -603,7 +603,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -651,7 +651,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td>Landing page_PC_main</td>
               <td></td>
@@ -663,7 +663,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>Policy_PC_필수약관 동의_default</td>
@@ -675,7 +675,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>Policy_PC_HB_필수약관 동의_active</td>
@@ -687,7 +687,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td>Policy_PC_HB_필수약관 동의_공통</td>
@@ -699,7 +699,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -711,7 +711,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -723,7 +723,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -735,7 +735,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -747,7 +747,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -759,7 +759,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -771,7 +771,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -783,7 +783,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -795,7 +795,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -807,7 +807,7 @@
               <td>20220111 로딩 게이지 속도 변경(1S→2S)<br>220106 기존 progress lib 삭제, 로딩 타입 변경</td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -819,7 +819,7 @@
               <td>220106 기대수명 progressbar 추가</td>
               <td></td>
             </tr>
-            <tr class="modify_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -831,7 +831,7 @@
               <td>211222 로컬에서 확인 가능하도록 html 삽입</td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
@@ -843,7 +843,7 @@
               <td></td>
               <td></td>
             </tr>
-            <tr class="pb_end">
+            <tr class="confirm_end">
               <td></td>
               <td></td>
               <td></td>
